--- a/Docusaurus/blog/authors.yml
+++ b/Docusaurus/blog/authors.yml
@@ -35,7 +35,7 @@ papaChick:
   name: Christian Raphael Heryanto
   title: CS Student
   url: https://github.com/papaChick
-  image_url: https//github.com/papaChick.png
+  image_url: https://github.com/papaChick.png
   page: true
   socials:
     github: papaChick
